# stylazar

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json
backend/: .env  .env.prod.sample  .gitignore  Dockerfile  README.md  chartdb-export_schema.sql  docker-compose-prod.yml  docker-compose.debug.yml  docker-compose.yml  gen-backend-readme.md  init.sql  main.py  pyproject.toml  requirements.txt  response_kimaita.json  utils.py
backend/api/: deps.py  main.py
backend/api/repository/: users_repo.py
backend/api/routes/: comments.py  login.py  posts.py  users.py
backend/api/v1/routes/: users.py
backend/core/: config.py  db.py  exceptions.py  security.py  utils.py
backend/crud/: crud_comments.py  crud_mongo_base.py  crud_posts.py  crud_session_activity.py  crud_users.py
backend/db/: init.sql
backend/middleware/: request_logging.py
backend/models/: base_model.py  comment.py  post.py  session.py  session_activity.py  token.py  user.py  util.py  visitor.py
backend/storage/: datastore.py
backend/utils/: middleware.py  security.py
client-side/: .babelrc.js  .gitignore  index.html  package-lock.json  package.json  vite.config.js
client-side/public/: index.html
client-side/src/: App.js  App.jsx  index.js  main.jsx  utils.js
client-side/src/components/: AppAppBar.js  AuthForm.js  AuthForm.jsx  FeedPostCard.jsx  Footer.js  Footer.jsx  ImagePicker.jsx  PostDetailView.js  PostDetailView.jsx  PostEditor.js  PostEditor.jsx  PostListView.jsx  ProtectedRoute.jsx  SinglePostCard.jsx  SitemarkIcon.js  (+1 more)
public/: index.html
src/: App.js
(+105 files in other folders)
