[project]
name = "stylazar_blog_backend"
version = "0.1.0"
description = "Contains the app's backend - API, storage"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beanie>=1.27.0",
    "boto3>=1.35.48",
    "fastapi[standard]>=0.115.2",
    "filetype>=1.2.0",
    "lxml>=5.3.0",
    "motor>=3.6.0",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=11.0.0",
    "psycopg-binary>=3.2.3",
    "psycopg>=3.2.3",
    "pydantic-settings>=2.6.0",
    "pyjwt>=2.9.0",
    "redis>=5.1.1",
    "requests>=2.32.3",
    "sqlmodel>=0.0.22",
]
